made titles consistent

--- a/docs/hpc/09_ood/05_FileZilla.mdx
+++ b/docs/hpc/09_ood/05_FileZilla.mdx
@@ -1,4 +1,4 @@
-# FileZilla
+# FileZilla in OOD
 
 As mentioned in [File Transfer Clients](../03_storage/03_data_transfers.md#file-transfer-clients), FileZilla is a client for transferring files.  It has been installed on OOD as a convenience, but be aware that you can use many of the other methods described in the [Data Transfers](../03_storage/03_data_transfers.md) section of our documentation for transferring your files on OOD, since they all use the same underlying filesystems.
 
