--- a/docs/hpc/09_ood/06_Alphafold2.mdx
+++ b/docs/hpc/09_ood/06_Alphafold2.mdx
@@ -1,4 +1,4 @@
-# AlphaFold2
+# AlphaFold2 in OOD
 
 The AlphaFold2 software predicts protein structure from an amino acid sequence.  Please see the paper [Highly accurate protein structure prediction with AlphaFold](https://www.nature.com/articles/s41586-021-03819-2) for details.
 
