--- a/docs/hpc/09_ood/07_igv.mdx
+++ b/docs/hpc/09_ood/07_igv.mdx
@@ -1,4 +1,4 @@
-# Integrative Genomics Viewer (IGV) 
+# Integrative Genomics Viewer (IGV) in OOD
 
 The IGV is a high-performance, easy-to-use, interactive tool for the visual exploration of genomic data.
 
