added first pass on ood stata

--- a/docs/hpc/09_ood/10_NGLView.mdx
+++ b/docs/hpc/09_ood/10_NGLView.mdx
@@ -13,7 +13,7 @@ Be aware that when you start from `Recently Used Apps` it will start with the sa
 
 You can select the number or cores, amount of memory, GPU type (if any) and CUDA version, amount of time, optional Slurm options, and the root directory.
 
-![OOD Matlab Configuration](./static/ood_nglview_config.png)
+![OOD NGLView Configuration](./static/ood_nglview_config.png)
 
 :::warning
 If you select home as the root directory, be careful not to go over your quota.  You can find your current usage with the `myquota` command.  Please see our [Storage documentation](../03_storage/01_intro_and_data_management.mdx) for details about your storage options.
@@ -29,7 +29,7 @@ Once that happens you'll get one last form that will allow you to:
 -   open a terminal window on the compute node your NGLView Jupyter Notebook session is running on
 -   go to the directory associated with your Session ID that stores output, config and other related files for your session
 
-![Pre-launch matlab OOD](./static/ood_nglview_prelaunch.png)
+![Pre-launch NGLView OOD](./static/ood_nglview_prelaunch.png)
 
 Then after you hit the `Connect to NGLView Jupyter` button you'll be able to use NGLView commands in a Jupyter Notebook.
 
