little text fix

--- a/docs/hpc/09_ood/11_Stata.mdx
+++ b/docs/hpc/09_ood/11_Stata.mdx
@@ -33,7 +33,7 @@ Then after you hit the `Launch STATA` button, your Stata window will be displaye
 
 ### Stata example
 
-Please enter the following commands into the Stata command window and run execute them by hitting `enter`:
+Please enter the following commands into the Stata command window and execute them by hitting `enter`:
 ```
 . sysuse auto
 . describe
