added first pass of dask OOD tutorial

--- a/docs/hpc/09_ood/13_TeachOpenCADD.mdx
+++ b/docs/hpc/09_ood/13_TeachOpenCADD.mdx
@@ -21,7 +21,7 @@ You can select the number cores, amount of memory, gpu type (if any), optional S
 If you select to use `/home` as your root directory be careful not to go over your quota.  You can find your current usage with the `myquota` command.  Please see our [Storage documentation](../03_storage/01_intro_and_data_management.mdx) for details about your storage options.
 :::
 
-## Spark Standalone Cluster with Jupyter Notebook running in OOD
+## TeachOpenCADD with Jupyter Notebook running in OOD
 
 After you hit the `Launch` button you'll have to wait for the scheduler to find node(s)for you to run on:
 ![OOD TeachOpenCADD in queue](./static/ood_teachopencadd_in_queue.png)
