added first pass of ood desktop tutorial

--- a/docs/hpc/09_ood/14_Dask_Jupyter_Notebook.mdx
+++ b/docs/hpc/09_ood/14_Dask_Jupyter_Notebook.mdx
@@ -26,9 +26,9 @@ If you select to use `/home` as your root directory be careful not to go over yo
 After you hit the `Launch` button you'll have to wait for the scheduler to find node(s)for you to run on:
 ![OOD Dask in queue](./static/ood_dask_in_queue.png)
 
-Then you'll have a short wait for Spark itself to start up.<br />
+Then you'll have a short wait for Dask itself to start up.<br />
 Once that happens you'll get one last page that will give you links to:
--   open a terminal window on the compute node your Spark session is running on
+-   open a terminal window on the compute node your Dask session is running on
 -   go to the directory associated with your Session ID that stores output, config and other related files for your session
 
 ![Pre-launch Dask OOD](./static/ood_dask_prelaunch.png)
