reorg ood pages

--- a/docs/hpc/09_ood/08_jupyter_with_conda_singularity.mdx
+++ b/docs/hpc/09_ood/08_jupyter_with_conda_singularity.mdx
@@ -1,4 +1,4 @@
-# Jupyter with Conda/Singularity in OOD
+# Jupyter Notebook with Conda/Singularity in OOD
 
 ## OOD + Singularity + conda
 This page describes how to use your Singularity with conda environment in OOD GUI at Greene. 
