--- a/docs/hpc/09_ood/06_igv.mdx
+++ b/docs/hpc/09_ood/06_igv.mdx
@@ -7,13 +7,11 @@ Please see the following links for details:
 -   [Tutorial Videos](https://www.youtube.com/channel/UCb5W5WqauDOwubZHb-IA_rA)
 
 ## Getting Started
-You can run IGV in OOD by going to the URL [ood.hpc.nyu.edu](http://ood.hpc.nyu.edu) in your browser and selecting `IGV` from the `Interactive Apps` pull-down menu at the top of the page.  As you can see below, once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
+You can run IGV in OOD by going to the URL [ood.hpc.nyu.edu](http://ood.hpc.nyu.edu) in your browser and selecting `IGV` from the `Interactive Apps` pull-down menu at the top of the page.  Once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
 
 :::note
 Be aware that when you start from `Recently Used Apps` it will start with the same configuration that you used previously.  If you'd like to configure your IGV session differently, you'll need to select it from the menu.
 :::
-
-![OOD Interactive Apps menu IGV](./static/ood_interactive_apps_igv.png)
 
 ## Configuration
 
