--- a/docs/hpc/09_ood/14_TeachOpenCADD.mdx
+++ b/docs/hpc/09_ood/14_TeachOpenCADD.mdx
@@ -3,13 +3,11 @@
 [TeachOpenCADD](https://projects.volkamerlab.org/teachopencadd/index.html) is a teaching platform for computer-aided drug design.
 
 ## Getting Started
-You can run TeachOpenCADD with Jupyter Notebook in OOD by going to the URL [ood.hpc.nyu.edu](http://ood.hpc.nyu.edu) in your browser and selecting `TeachOpenCADD` from the `Interactive Apps` pull-down menu at the top of the page.  As you can see below, once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
+You can run TeachOpenCADD with Jupyter Notebook in OOD by going to the URL [ood.hpc.nyu.edu](http://ood.hpc.nyu.edu) in your browser and selecting `TeachOpenCADD` from the `Interactive Apps` pull-down menu at the top of the page.  Once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
 
 :::note
 Be aware that when you start from `Recently Used Apps` it will start with the same configuration that you used previously.  If you'd like to configure your TeachOpenCADD session differently, you'll need to select it from the menu.
 :::
-
-![OOD Interactive Apps menu](./static/ood_interactive_apps_teachopencadd.png)
 
 ## Configuration
 
