--- a/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
@@ -56,7 +56,7 @@ On Geene, you have a number of places where you can store your files. These diff
 -   **Scratch** – used for temporary file storage while running jobs. It is not backed up and files that are unused for over 60 days are purged. It should not be used for long term storage.
 -   **Vast** – flash-drive based system that is optimal for workloads with high I/O rates. Like the `scratch` storage, it is also not backed up and files that are unused for over 60 days are purged.
 -   **Research Project Space (RPS)** – provides data storage space for research projects that is easily shared amongst collaborators, backed up, and not subject to the old file purging policy. Note that it is a paid service.
--   **Archive** – provides a space for long-term storage of research output. It is only accessible from the login nodes, so it is unaccessible by running jobs.
+-   **Archive** – provides a space for long-term storage of research output. It is only accessible from the login nodes, so it is inaccessible by running jobs.
 :::
 
 ## Nodes
