virtual keys are dead!

--- a/docs/genai/02_onboarding/03_quickstart.mdx
+++ b/docs/genai/02_onboarding/03_quickstart.mdx
@@ -21,16 +21,18 @@ from portkey_ai import Portkey
 
 portkey = Portkey(
     base_url="https://ai-gateway.apps.cloud.rt.nyu.edu/v1/",
-    api_key="",  # Replace with your Portkey API key
-    virtual_key="",  # Replace with your virtual key
+    api_key="", # Replace with your API key!
 )
 
 completion = portkey.chat.completions.create(
+    model="@vertexai/gemini-2.5-flash", # Replace with a model available to you!
     messages=[
         {"role": "system", "content": "You are not a helpful assistant"},
-        {"role": "user", "content": "Say this is a test"},
+        {
+            "role": "user",
+            "content": "Complete the following sentence:The sun is shining and the sky is",
+        },
     ],
-    model="", # Replace with the LLM model you'd like to use
 )
 
 print(completion)
