link to library guide

--- a/docs/genai/01_getting_started/01_intro.mdx
+++ b/docs/genai/01_getting_started/01_intro.mdx
@@ -8,8 +8,12 @@ Welcome to Pythia, the generative AI platform for research workflows. As part of
 - [Access to externally hosted LLMs](../01_getting_started/02_llm_gateway.mdx)
 - [HPC resources for fine tuning LLMs](../../hpc/08_ml_ai_hpc/04_llm_fine_tuning.md)
 
-:::tip[Personal use]
+:::info[Personal use]
 If you want to access NYU provided LLMs for personal use, proceed to https://gemini.google.com/app with your NYU credentials. 
+:::
+
+:::tip[GenAI Library Guide]
+Please visit the NYU Library guide on GenAI tools to understand how you can responsibly and effectively harness these tools for academic research: https://guides.nyu.edu/ai-tools
 :::
 
 For an overview of the capabilities afforded by the LLM gateway, proceed to the next section.
