--- a/docs/genai/04_how_to_guides/03_retrieval_augmented_generation.mdx
+++ b/docs/genai/04_how_to_guides/03_retrieval_augmented_generation.mdx
@@ -1,5 +1,9 @@
 # Retrieval-augmented generation
 
+:::tip[Foundations of Research Computing session on RAG]
+For an in-depth overview of RAG and Jupyter notebook examples, please access the source materials used for the 2025 FORC session on RAG at: https://github.com/NYU-RTS/rag-forc-2025
+:::
+
 Large Language Models only know about the data they were trained upon and do not have the context needed to be effective at answering questions based on:
 - private datasets
 - newer knowledge past the cutoff date (i.e. the date at which data collection was frozen)
