--- a/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
+++ b/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 
 [hpc account request form link for courses]: https://docs.google.com/forms/d/e/1FAIpQLSdehngqL1xso-YV6MOhplKNwxXjASHYnDtM_5THB3P2vrDKcg/viewform?usp=sf_link
 
-This section deals with the eligibility for getting HPC accounts, the process to create new accounts, renew existing ones and touches on access policies after graduation from NYU and access for non-NYU researchers.
+This section deals with the eligibility for getting HPC accounts, the process to create new accounts, renew existing ones, touches on access policies after graduation from NYU, and access for non-NYU researchers.
 
 :::info
 
@@ -23,12 +23,12 @@ This section deals with the eligibility for getting HPC accounts, the process to
 
 ## Who is eligible for an NYU HPC account ?
 
-NYU HPC clusters and related resources are available to full-time NYU faculty and to all NYU staff and, students with sponsorship from a full-time NYU faculty.
+NYU HPC clusters and related resources are available to full-time NYU faculty and to all NYU staff and students with sponsorship from a full-time NYU faculty.
 
 
 ## Getting a new account on the NYU HPC clusters
 
-To request an NYU HPC account please log in to [NYU Identity Management service][nyu ims link] and follow the link to "Request HPC account". We have a walkthrough of how to [request an account through IIQ](03_walkthrough_request_hpc_account.mdx). If you are a student, alumni or an external collaborator you need an NYU faculty sponsor.
+To request an NYU HPC account please log in to [NYU Identity Management service][nyu ims link] and follow the link to "Request HPC account" by clicking on the hamburger icon on the top left of the page and selecting "Manage Access" . We have a walkthrough of how to [request an account through IIQ](03_walkthrough_request_hpc_account.mdx). If you are a student, alumni or an external collaborator you will need an NYU faculty sponsor.
 
 ## Renewing HPC account
 
@@ -50,7 +50,7 @@ All full-time NYU faculty members (other than NYU Med School) are eligible to be
 
 -   Non-NYU researchers with whom they are actively collaborating
 
-If you need to sponsor an HPC account for an external collaborator (for example, for an NYU alumnus), please, request a "research affiliate" affiliation for your collaborator. You can find the instructions at https://start.nyu.edu/.
+If you need to sponsor an HPC account for an external collaborator (for example, for an NYU alumnus), please, request that they become a "research affiliate". You can find the instructions at https://start.nyu.edu/.
 
 You can request a NetID for your student(s) or collaborator(s) at https://start.nyu.edu/pwm/public/. The request form has additional information about affiliates.
 
@@ -73,32 +73,35 @@ HPC bulk accounts request is disabled for HPC sponsors.
 -   If you would like to use JupyterHub for your classes, please don't submit the form below, read \[Jupyter Hub page]**TODO Add a page for JHub in the Cloud section** instead (the link to an intake form is also there)
 
 -   Please fill out this [request form][hpc account request form link for courses] for the course, we'll create HPC accounts for the class per request
-
--   Note that accounts created for courses last until the end of the semester, rather than a full year.
-
+:::note
+Accounts created for courses last until the end of the semester, rather than a full year.
+:::
 ## Getting an account with one of NYU partners
 
-NYU partners (\[look for the list here]) with many state and national facilities with a variety of HPC systems and expertise. \[Contact us] for assistance setting up a collaboration with any of these.
+\[NYU partners with many state and national facilities](**TODO:link to list**) with a variety of HPC systems and expertise. 
+
+[Contact us](email:hpc@nyu.edu) for assistance setting up a collaboration with any of these.
 
 ## Non-NYU Researchers
 
-If you are part of collaboration with NYU researcher you need to obtain an **affiliate** status before applying for an NYU HPC account. A full-time NYU faculty member must sponsor a non-NYU collaborator for an affiliate status.
+If you are collaboratng with NYU researchers you will need to obtain **affiliate** status before applying for an NYU HPC account. A full-time NYU faculty member must sponsor a non-NYU collaborator for affiliate status.
 
 Please see [instructions for affiliate management][affiliate and account management link] (NYU NetID login is required to follow the link). [Please read instructions about sponsoring external collaborators here](06_hpc_accounts_external_collaborators.md).
 
 
 ## Access to cluster after Graduation
 
-If you will still work on a project with an NYU researchers after graduation - refer to the section above for "Non-NYU Researchers"
+If you will need to work on a project with an NYU researchers after graduation - refer to the section above for "Non-NYU Researchers"
 
-If you are not part of a collaboration, your access to cluster will end together with NetID becoming non-active. Please copy all your data cluster (if you need any) before that time.
+If you are not part of a collaboration, your access to the cluster will end with your NetID becoming non-active. Please copy all your data from the cluster (if you need any) before that time.
 
 
 ## VPN on a Linux machine
 
-:::note
+In order to request a new HPC account or renew an expired one, you need to be connected to the NYU VPN if you are working remotely, Please see [instructions on how to install and use the NYU VPN][nyu vpn link].
 
-In order to request a new HPC account or renew an expired one, you need to be connected to the NYU VPN if you are working remotely, Please see [instructions on how to install and use the NYU VPN][nyu vpn link]. Linux clients are not officially supported, however we were able to successfully use openVPN client. Here are installation and connection instructions for a debian linux distribution with apt package manager:
+:::tip
+Linux clients are not officially supported, however we were able to successfully use openVPN client. Here are installation and connection instructions for a debian linux distribution with apt package manager:
 
 
 <Tabs>
