--- a/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
+++ b/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
@@ -4,7 +4,7 @@ Login to coldfront at [coldfront.hpc.nyu.edu](https://coldfront.hpc.nyu.edu) eit
 ![Project Dropdown](./static/project_dropdown.png)
 
 <br/>
-If you are a PI, you will be able to see a button "+ Add a Project" button that will let you create a new project. <br/>
+If you are a PI, you will be able to see a "+ Add a Project" button that will let you create a new project. <br/>
 
 ![Project Add Button](./static/project_add_button.png)
 
