--- a/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
+++ b/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
@@ -16,7 +16,7 @@ Scroll down and you'll reach the Allocations section. This section lists all the
 If you scroll down, you'll see "+Request Resource Allocation" button.
 !["PI request allocation" section](./static/PI_request_allocation.png)
 
-After clicking "+Request Resource Allocation", you'll see a list of resources you can request for. All projects can request access to Torch, which provides access to the cluster. However, depending on the school the project is affiliated with, high priority resources are available.
+After clicking "+Request Resource Allocation", you'll see a list of resources you can request. All projects can request access to Torch, which provides access to the cluster. However, depending on the school the project is affiliated with, high priority resources may be available.
 
 :::info Available resource for each school:
 <Tabs>
