--- a/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
+++ b/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
@@ -3,15 +3,15 @@ import TabItem from '@theme/TabItem';
 
 # How to request an HPC account
 
-First, check if you already have an account. You can check this by attempting to log in to the cluster, according to the instructions at [Connecting to the HPC Cluster](../02_connecting_to_hpc/01_connecting_to_hpc.mdx)
-
-:::info VPN Needed
-You need to be on the NYU VPN to perform this task!
+:::tip
+Make sure you don't already have an HPC account. You can check this by attempting to log in to the cluster, according to the instructions at [Connecting to the HPC Cluster](../02_connecting_to_hpc/01_connecting_to_hpc.mdx).
 :::
 
 Login to the URL given below, using your NetID/password, to create or manage HPC Account Requests:
 https://identity.it.nyu.edu/
-
+:::info VPN Needed
+You need to be on the NYU VPN to perform this task!
+:::
 
 <Tabs>
   <TabItem value="end-users" label="Researcher/End-User" default>
@@ -25,7 +25,7 @@ https://identity.it.nyu.edu/
   
   ![Request account left hand button](./static/request_account.png)
   
-  You will be prompted with a form. Continue to fill it out and Submit.
+  You will be prompted with a form. Please fill it out and Submit.
   ![Request account form](./static/request_form.png)
   </TabItem>
   <TabItem value="sponsors" label="Faculty/Sponsor/Approver">
