--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -92,13 +92,7 @@ ssh greene
 ```
 6. Authenticate
 
-
-After typing in your password you will be logged in to the cluster. Once this connection is established, you can make one more hop and connect to one of the HPC clusters:
-
-```sh
-# this will connect you to Greene HPC cluster
-ssh <NetID>@greene.hpc.nyu.edu
-```
+After typing in your password you will be logged in to the cluster.
 
 ### Windows CMD
 
