--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -12,6 +12,7 @@ If you'd prefer to access the HPC cluster via a web gateway instead, please refe
 The following sections will outline basic ways to connect to the Greene cluster. Access to the clusters is primarily handled via the Secure Shell Protocol, or ssh. Below we outline ways to connect via ssh on Mac, Linux, and Windows machines.
 
 ## Quick Start HPC Connection Guide
+### Configuring Your SSH Client
 To connect to HPC systems, it's important to configure your machine's SSH client. For Linux and Mac machines, the configuration file is the ~/.ssh/config file on your computer. These are the basic lines that should be added to your ~/.ssh/config file:
 ```sh
 Host greene.hpc.nyu.edu dtn.hpc.nyu.edu gw.hpc.nyu.edu
