--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -49,6 +49,41 @@ New-Item -Path $HOME\.ssh\config -ItemType File
 C:\WINDOWS\System32\notepad.exe $HOME\.ssh\config
 ```
 Configuring the file above will allow you to use the cmd terminal to connect to Greene.
+### Avoiding Man in the Middle Warning.
+
+If you see this warning:
+
+:::warning
+
+```sh
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!
+Someone could be eavesdropping on you right now (man-in-the-middle attack)!
+It is also possible that a host key has just been changed.
+```
+
+:::
+
+Do not be alarmed - this is an issue that occurs because the cluster has multiple login nodes (`log-1`, `log-2`, and `log-3`) that `greene.hpc.nyu.edu` resolves to. 
+
+To avoid this warning, you can add these lines to your SSH configuration file. Open `~/.ssh/config` and place the following lines in it:
+
+:::tip
+This segment, referenced in the recommended config above will nullify the error:
+
+```sh
+Host greene.hpc.nyu.edu dtn.hpc.nyu.edu gw.hpc.nyu.edu
+  StrictHostKeyChecking no
+  ServerAliveInterval 60
+  ForwardAgent yes
+  StrictHostKeyChecking no
+  UserKnownHostsFile /dev/null
+  LogLevel ERROR
+```
+The above will also fix SSH timeout errors by extending the `ServerAliveInterval` argument.
+:::
 
 ### Connecting to the NYU Network
 To access the HPC systems, you must either be on the NYU secure network (such as the NYU WiFi or a wired connection from an NYU office) or use a method of accessing it, such as the NYU VPN or the HPC Gateway servers.
