--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -162,7 +162,7 @@ Instead of typing your password every time you need to log in, you can also spec
 
 -   Next time you will log into cluster no password will be required
 
-For additional recommendations on how to configure your SSH sessions, see the \[ssh configuring and x11 forwarding page].
+For additional recommendations on how to configure your SSH sessions, see the [ssh configuring and x11 forwarding page](./02_ssh_tunneling_and_x11_forwarding.md).
 
 ### PuTTY (Only for Windows)
 
