genai/announcements: maybe it's time to be a bit more formal as more users access the docs portal

--- a/blog/2025-05-02-blog-post.mdx
+++ b/blog/2025-05-02-blog-post.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 2025-05-02-o4-mini
-title: o4-mini is now available!
+title: o4-mini is now available
 authors: [sajid-ali]
 tags: [pythia, genai]
 ---
