--- a/blog/2025-09-10-blog-post.mdx
+++ b/blog/2025-09-10-blog-post.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 2025-09-10-claude
-title: claude is now available!
+title: Claude is now available
 authors: [sajid-ali]
 tags: [pythia, genai]
 ---
